--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>projeto Login</title>
     <link rel="stylesheet" href="estilo/style.css">
+    <link rel="stylesheet" href="estilo/media-query.css">
 </head>
 <body>
      <main>
         <section id="login">
             <div id="imagem">
-                 foto
+                 <!--Aqui vai a foto-->
             </div>
             <div id="formulario">
                 <h1>Login</h1>
