--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>projeto Login</title>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
+
     <link rel="stylesheet" href="estilo/style.css">
     <link rel="stylesheet" href="estilo/media-query.css">
 </head>
@@ -16,8 +19,23 @@
             <div id="formulario">
                 <h1>Login</h1>
                 <p>Seja bem-vindo(a) novamente. Faça login para acessar sua conta e pode fazer as configurações no seu ambiente</p>
-                <form action="php/login.php" method="post">
-                    
+                <form action="php/login.php" method="post" autocomplete="on">
+                    <div class="campo"> 
+                        <span class="material-icons">person</span>       
+                        <input type="email" name="login" id="ilogin" placeholder="seu e-mail" autocomplete="email" maxlength="30" required>
+                        <label for="ilogin">Login</label>
+                    </div>
+                    <div class="campo">
+                        <span class="material-icons">vpn_key</span>
+                        <input type="password" name="pass" id="ipass" placeholder="sua senha" autocomplete="current-password" minlength="8" maxlength="20" required>
+                        <label for="ipass">Senha</label>
+                    </div>
+                    <div>
+                        <input type="submit" value="Entar" class="entrar">
+                        <a href="esqueciasenha.html" class="botao">Esqueci a Senha
+                            <span class="material-icons">mail</span>
+                        </a>
+                    </div>
                 </form>
             </div>
         </section>
