projeto login edição

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                         <label for="ipass">Senha</label>
                     </div>
                     <div>
-                        <input type="submit" value="Entar" class="entrar">
+                        <input type="submit" value="Entrar" class="entrar">
                         <a href="esqueciasenha.html" class="botao">Esqueci a Senha
                             <span class="material-icons">mail</span>
                         </a>
